tests/typing/errors/bad_term_arity/pb.p

tff(test1, type, (p : ($i * $i) > $o)).

tff(test2, axiom, p(a) ).

