tests/typing/errors/bad_term_arity/pb.expected
File "tests/typing/errors/bad_term_arity/pb.p", line 4, character 18-22:
Error Bad arity: expected 2 but got 1 arguments for function
      p : $i -> $i -> Prop
